fixed syntax and created external files

--- a/public/lab_styles.css
+++ b/public/lab_styles.css
@@ -102,3 +102,18 @@ h3 {
   position: relative;
   top: 1px;
 }
+
+#banner {
+  background-image: url("https://images.pexels.com/photos/349610/pexels-photo-349610.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=");
+  color: darkslategrey;
+  background-size: cover;
+}
+
+#mapid {
+  height: 400px;
+  border: 1pt solid black;
+}
+
+#banner-text {
+  text-align: left;
+}
