--- a/public/styles.css
+++ b/public/styles.css
@@ -11,7 +11,9 @@
 
 #mapid {
   height: 400px;
-  border: 1pt solid black;
+  border: 1pt solid #2C4C59;
+  margin-top: -23px;
+  margin-bottom: 23px;
 }
 
 #banner-text {
@@ -38,15 +40,29 @@ body {
 
 .header {
   font-family: 'Alegreya Sans', sans-serif;
+  color: #2C4C59
 
 }
 
 .section-head {
   font-family: 'Merriweather Sans', sans-serif;
-  font-size: 2.5em;
+  font-size: 2.3em;
+  text-transform: uppercase;
+  color: #2C4C59;
+  margin-top: 10px;
+}
 
+
+.results {
+  font-family: 'Nunito', sans-serif;
+  text-align: center;
+  color: #467F8C
+}
+.nav-link {
+  font-family: 'Nunito', sans-serif;
 
 }
+
 
 p {
   font-family: 'Nunito', sans-serif;
@@ -59,4 +75,6 @@ p {
   width: 100%;
   height: 60px; /* Set the fixed height of the footer here */
   line-height: 60px; /* Vertically center the text there */
+
+
 }
