--- a/public/styles.css
+++ b/public/styles.css
@@ -76,45 +76,66 @@ p {
   height: 60px; /* Set the fixed height of the footer here */
   line-height: 60px; /* Vertically center the text there */
 }
-.team-cards {
-  display: inline-flex;
-}
 
-.flip-card {
-  background-color: transparent;
-  width: 300px;
-  height: 300px;
-  perspective: 1000px;
+/* Cards  CSS*/
+@media only screen and (max-width: 830px) {
+  .flip-card,.flip-card-front img {
+    width: 150px!important;
+    height: 150px!important;
+  }
+  .flip-card-back {
+    font-size: 12pt!important;
+  }
 }
-
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.6s;
-  transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+@media only screen and (max-width: 565px) {
+  .flip-card,.flip-card-front img {
+    width: 100px!important;
+    height: 100px!important;
+  }
+  .flip-card-back {
+    font-size: 10pt!important;
+  }
 }
-
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-}
-
-.flip-card-front {
-  background-color: #bbb;
-  color: black;
-}
-
 .flip-card-back {
-  background-color: #2980b9;
-  color: white;
-  transform: rotateY(180deg);
+  font-size: 18pt;
+}
+.team-cards td{
+  padding: 5px;
+}
+.flip-card {
+background-color: transparent;
+width: 200px;
+height: 200px;
+perspective: 1000px;
+}
+.flip-card-inner {
+position: relative;
+width: 100%;
+height: 100%;
+text-align: center;
+transition: transform 0.6s;
+transform-style: preserve-3d;
+box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+.flip-card:hover .flip-card-inner {
+transform: rotateY(180deg);
+}
+.flip-card-front, .flip-card-back {
+position: absolute;
+width: 100%;
+height: 100%;
+backface-visibility: hidden;
+}
+.flip-card-front {
+background-color: #bbb;
+color: black;
+}
+.flip-card-back {
+background-color: #2980b9;
+color: white;
+transform: rotateY(180deg);
+}
+.flip-card-front img {
+  width: 200px;
+  height: 200px;
 }
