updated inspection results

--- a/public/styles.css
+++ b/public/styles.css
@@ -55,7 +55,7 @@ body {
 
 .results {
   font-family: 'Nunito', sans-serif;
-  text-align: center;
+  text-align: left;
   color: #467F8C
 }
 .nav-link {
