--- a/src/styles.css
+++ b/src/styles.css
@@ -137,6 +137,11 @@ p {
     margin-top: 0px;
   }
 }
+@media only screen and (max-width: 580px) {
+  #gmaps-icon {
+    width: 10%;
+  }
+}
 .flip-card-back {
   font-size: 18pt;
 }
