--- a/src/styles.css
+++ b/src/styles.css
@@ -31,7 +31,15 @@ body {
 .nav-link {
   color: #2C4C59 !important;
 }
-
+#contact {
+  display: table;
+  margin: 0 auto;
+  padding: 50px;
+}
+.msgdone {
+  padding-top: 10px;
+  color: green;
+}
 .active {
   font-weight: bold;
 }
